--- a/ETL_Mini_Project_FArffmann_PGupta_SGingery_JMcNamara_JWhited.ipynb
+++ b/ETL_Mini_Project_FArffmann_PGupta_SGingery_JMcNamara_JWhited.ipynb
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
        "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
+       "      <th>sub-category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1081,7 +1081,7 @@
        "3             24      US      USD   1634792400  1642399200       False   \n",
        "4             53      US      USD   1608530400  1629694800       False   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
+       "   spotlight category & sub-category    category sub-category  \n",
        "0      False        food/food trucks        food  food trucks  \n",
        "1       True              music/rock       music         rock  \n",
        "2      False          technology/web  technology          web  \n",
@@ -1089,7 +1089,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1136,13 +1136,13 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
        "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
+       "      <th>sub-category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1265,14 +1265,14 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
        "4                      Proactive foreground core    7600     5265      failed   \n",
        "\n",
-       "   backers_count country currency  launched_date    end_date  staff_pick  \\\n",
-       "0              0      CA      CAD     1581573600  1614578400       False   \n",
-       "1            158      US      USD     1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD     1608184800  1640844000       False   \n",
-       "3             24      US      USD     1634792400  1642399200       False   \n",
-       "4             53      US      USD     1608530400  1629694800       False   \n",
+       "   backers_count country currency  launch_date    end_date  staff_pick  \\\n",
+       "0              0      CA      CAD   1581573600  1614578400       False   \n",
+       "1            158      US      USD   1611554400  1621918800       False   \n",
+       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
+       "3             24      US      USD   1634792400  1642399200       False   \n",
+       "4             53      US      USD   1608530400  1629694800       False   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
+       "   spotlight category & sub-category    category sub-category  \n",
        "0      False        food/food trucks        food  food trucks  \n",
        "1       True              music/rock       music         rock  \n",
        "2      False          technology/web  technology          web  \n",
@@ -1280,18 +1280,23 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df = campaign_df.rename(columns={\n",
+    "    \"blurb\": \"description\",\n",
+    "    \"launched_at\": \"launch_date\",\n",
+    "    \"deadline\": \"end_date\"})\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1325,13 +1330,13 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
        "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
+       "      <th>sub-category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1454,14 +1459,14 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency  launched_date    end_date  \\\n",
-       "0      failed              0      CA      CAD     1581573600  1614578400   \n",
-       "1  successful            158      US      USD     1611554400  1621918800   \n",
-       "2  successful           1425      AU      AUD     1608184800  1640844000   \n",
-       "3      failed             24      US      USD     1634792400  1642399200   \n",
-       "4      failed             53      US      USD     1608530400  1629694800   \n",
+       "      outcome  backers_count country currency  launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD   1581573600  1614578400   \n",
+       "1  successful            158      US      USD   1611554400  1621918800   \n",
+       "2  successful           1425      AU      AUD   1608184800  1640844000   \n",
+       "3      failed             24      US      USD   1634792400  1642399200   \n",
+       "4      failed             53      US      USD   1608530400  1629694800   \n",
        "\n",
-       "   staff_pick  spotlight category & sub-category    category  subcategory  \n",
+       "   staff_pick  spotlight category & sub-category    category sub-category  \n",
        "0       False      False        food/food trucks        food  food trucks  \n",
        "1       False       True              music/rock       music         rock  \n",
        "2       False      False          technology/web  technology          web  \n",
@@ -1469,18 +1474,21 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df['goal'] = campaign_df['goal'].astype(float)\n",
+    "campaign_df['pledged'] = campaign_df['pledged'].astype(float)\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1496,28 +1504,29 @@
        "backers_count                int64\n",
        "country                     object\n",
        "currency                    object\n",
-       "launched_date                int64\n",
+       "launch_date                  int64\n",
        "end_date                     int64\n",
        "staff_pick                    bool\n",
        "spotlight                     bool\n",
        "category & sub-category     object\n",
        "category                    object\n",
-       "subcategory                 object\n",
+       "sub-category                object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1551,13 +1560,13 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
        "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
+       "      <th>sub-category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1680,14 +1689,14 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency launched_date    end_date  \\\n",
-       "0      failed              0      CA      CAD    2020-02-13  2021-03-01   \n",
-       "1  successful            158      US      USD    2021-01-25  2021-05-25   \n",
-       "2  successful           1425      AU      AUD    2020-12-17  2021-12-30   \n",
-       "3      failed             24      US      USD    2021-10-21  2022-01-17   \n",
-       "4      failed             53      US      USD    2020-12-21  2021-08-23   \n",
+       "      outcome  backers_count country currency launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
+       "1  successful            158      US      USD  2021-01-25  2021-05-25   \n",
+       "2  successful           1425      AU      AUD  2020-12-17  2021-12-30   \n",
+       "3      failed             24      US      USD  2021-10-21  2022-01-17   \n",
+       "4      failed             53      US      USD  2020-12-21  2021-08-23   \n",
        "\n",
-       "   staff_pick  spotlight category & sub-category    category  subcategory  \n",
+       "   staff_pick  spotlight category & sub-category    category sub-category  \n",
        "0       False      False        food/food trucks        food  food trucks  \n",
        "1       False       True              music/rock       music         rock  \n",
        "2       False      False          technology/web  technology          web  \n",
@@ -1695,19 +1704,22 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "campaign_df['launch_date'] = pd.to_datetime(campaign_df['launch_date']).dt.date\n",
+    "campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date']).dt.date\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1741,13 +1753,13 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
        "      <th>category &amp; sub-category</th>\n",
        "      <th>category</th>\n",
-       "      <th>subcategory</th>\n",
+       "      <th>sub-category</th>\n",
        "      <th>category_id</th>\n",
        "      <th>subcategory_id</th>\n",
        "    </tr>\n",
@@ -2002,17 +2014,17 @@
        "998      Polarized composite customer loyalty   66600.0   37823.0      failed   \n",
        "999               Expanded eco-centric policy  111100.0   62819.0    canceled   \n",
        "\n",
-       "     backers_count country currency launched_date    end_date  staff_pick  \\\n",
-       "990             64      US      USD    2021-06-09  2021-06-18       False   \n",
-       "991            241      US      USD    2020-12-09  2021-05-26       False   \n",
-       "992            132      US      USD    2020-06-14  2021-02-09       False   \n",
-       "993             75      IT      EUR    2021-07-03  2021-07-08       False   \n",
-       "994            842      US      USD    2021-11-15  2021-12-07       False   \n",
-       "995           2043      US      USD    2020-12-29  2021-05-30       False   \n",
-       "996            112      US      USD    2021-10-15  2021-11-30       False   \n",
-       "997            139      IT      EUR    2021-11-06  2021-12-10       False   \n",
-       "998            374      US      USD    2020-10-08  2021-04-11       False   \n",
-       "999           1122      US      USD    2020-12-30  2021-08-18       False   \n",
+       "     backers_count country currency launch_date    end_date  staff_pick  \\\n",
+       "990             64      US      USD  2021-06-09  2021-06-18       False   \n",
+       "991            241      US      USD  2020-12-09  2021-05-26       False   \n",
+       "992            132      US      USD  2020-06-14  2021-02-09       False   \n",
+       "993             75      IT      EUR  2021-07-03  2021-07-08       False   \n",
+       "994            842      US      USD  2021-11-15  2021-12-07       False   \n",
+       "995           2043      US      USD  2020-12-29  2021-05-30       False   \n",
+       "996            112      US      USD  2021-10-15  2021-11-30       False   \n",
+       "997            139      IT      EUR  2021-11-06  2021-12-10       False   \n",
+       "998            374      US      USD  2020-10-08  2021-04-11       False   \n",
+       "999           1122      US      USD  2020-12-30  2021-08-18       False   \n",
        "\n",
        "     spotlight        category & sub-category      category  \\\n",
        "990       True             film & video/drama  film & video   \n",
@@ -2026,7 +2038,7 @@
        "998       True               music/indie rock         music   \n",
        "999      False               food/food trucks          food   \n",
        "\n",
-       "           subcategory category_id subcategory_id  \n",
+       "          sub-category category_id subcategory_id  \n",
        "990              drama        cat5        subcat7  \n",
        "991               rock        cat2        subcat2  \n",
        "992              drama        cat5        subcat7  \n",
@@ -2039,7 +2051,7 @@
        "999        food trucks        cat1        subcat1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2047,14 +2059,16 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
-    "\n",
+    "merged_with_category_df = pd.merge(campaign_df, category_df, left_on='category', right_on='category', how='left')\n",
+    "campaign_merged_df = pd.merge(merged_with_category_df, subcategory_df, left_on='sub-category', right_on='subcategory', how='left')\n",
+    "campaign_merged_df = campaign_merged_df.drop(columns=['subcategory'])\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2102,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>category_id</th>\n",
        "      <th>subcategory_id</th>\n",
@@ -2199,12 +2213,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency launched_date    end_date  \\\n",
-       "0      failed              0      CA      CAD    2020-02-13  2021-03-01   \n",
-       "1  successful            158      US      USD    2021-01-25  2021-05-25   \n",
-       "2  successful           1425      AU      AUD    2020-12-17  2021-12-30   \n",
-       "3      failed             24      US      USD    2021-10-21  2022-01-17   \n",
-       "4      failed             53      US      USD    2020-12-21  2021-08-23   \n",
+       "      outcome  backers_count country currency launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
+       "1  successful            158      US      USD  2021-01-25  2021-05-25   \n",
+       "2  successful           1425      AU      AUD  2020-12-17  2021-12-30   \n",
+       "3      failed             24      US      USD  2021-10-21  2022-01-17   \n",
+       "4      failed             53      US      USD  2020-12-21  2021-08-23   \n",
        "\n",
        "  category_id subcategory_id  \n",
        "0        cat1        subcat1  \n",
@@ -2214,23 +2228,25 @@
        "4        cat4        subcat4  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_cleaned_df = campaign_merged_df.drop(columns=['staff_pick','spotlight','category & sub-category','category','sub-category'])\n",
+    "campaign_cleaned_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+    "campaign_cleaned_df.to_csv(\"Resources/campaign.csv\", index=False)"
    ]
   },
   {
