Corrected the datetime format error

--- a/ETL_Mini_Project_FArffmann_PGupta_SGingery_JMcNamara_JWhited.ipynb
+++ b/ETL_Mini_Project_FArffmann_PGupta_SGingery_JMcNamara_JWhited.ipynb
@@ -1712,8 +1712,8 @@
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
     "from datetime import datetime as dt\n",
-    "campaign_df['launch_date'] = pd.to_datetime(campaign_df['launch_date']).dt.date\n",
-    "campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date']).dt.date\n",
+    "campaign_df['launch_date'] = pd.to_datetime(campaign_df['launch_date'], errors='coerce').dt.date\n",
+    "campaign_df['end_date'] = pd.to_datetime(campaign_df['end_date'],errors='coerce').dt.date\n",
     "campaign_df.head()"
    ]
   },
